language/move-prover/tests/sources/functional/references.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/references.move:61:9 ───
    │
 61 │         aborts_if true;
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/references.move:53:5: mut_ref_incorrect (entry)
    =     at tests/sources/functional/references.move:54:13: mut_ref_incorrect
    =     at tests/sources/functional/references.move:55:31: mut_ref_incorrect
    =         b = <redacted>,
    =         b_ref = <redacted>
    =     at tests/sources/functional/references.move:38:5: mut_b (entry)
    =     at tests/sources/functional/references.move:39:9: mut_b
    =         b = <redacted>,
    =         b = <redacted>
    =     at tests/sources/functional/references.move:56:9: mut_ref_incorrect
    =         b_ref = <redacted>
    =     at tests/sources/functional/references.move:57:14: mut_ref_incorrect
    =         b = <redacted>
    =     at tests/sources/functional/references.move:58:13: mut_ref_incorrect
    =     at tests/sources/functional/references.move:53:5: mut_ref_incorrect (exit)
